package edu.bu.met.cs665.delivery.model;

public enum DriverType {
  VAN, TAXI, SCOOTER
}
